--- a/chrome-extension/content.css
+++ b/chrome-extension/content.css
@@ -1,15 +1,13 @@
 
 .injection-panel {
-  z-index: 9999;
   position: fixed;
   right: 0;
-  top: 0;
+  top: 20px;
   width: 300px;
-  height: 80vh;
+  max-height: 80vh;
   background-color: #fff;
 }
 
 .invisible {
   display: none;
 }
-
