button shows up whenever new content is highlighted on page

--- a/chrome-extension/content.css
+++ b/chrome-extension/content.css
@@ -1,13 +1,17 @@
 
 .injection-panel {
+  z-index: 9999;
   position: fixed;
   right: 0;
   top: 20px;
   width: 300px;
   max-height: 80vh;
   background-color: #fff;
+  display: none;
 }
 
-.invisible {
+.injection-icon {
+  z-index: 9999;
+  position: absolute;
   display: none;
 }
