--- a/webapp-client/src/stylesheets/Navbar.css
+++ b/webapp-client/src/stylesheets/Navbar.css
@@ -1,7 +1,19 @@
 .list-category li{
   list-style: none;
-  padding: 15px;
+  padding: 5px;
+  background-color: brown;
+}
+.list-category li:hover {
+  background-color: blanchedalmond;
 }
 .nav-bar {
   width: 25%;
+  height: 100%;
+  position: absolute;
+  left: 5px;
+}
+
+.add-category-form {
+  position: absolute;
+  bottom: 10px;
 }
