--- a/webapp-client/src/stylesheets/Navbar.css
+++ b/webapp-client/src/stylesheets/Navbar.css
@@ -1,10 +1,13 @@
-.list-category li{
+.list-category li {
   list-style: none;
   padding: 5px;
   background-color: brown;
 }
 .list-category li:hover {
   background-color: blanchedalmond;
+}
+.list-category {
+  height: 30%;
 }
 .nav-bar {
   width: 25%;
@@ -15,5 +18,5 @@
 
 .add-category-form {
   position: absolute;
-  bottom: 10px;
+  bottom: 50%;
 }
