--- a/webapp-client/src/App.css
+++ b/webapp-client/src/App.css
@@ -25,3 +25,10 @@
     transform: rotate(360deg);
   }
 }
+
+.control-column {
+  width: 25%;
+  height: 100%;
+  position: absolute;
+  left: 5px;
+}
