--- a/webapp-client/src/App.css
+++ b/webapp-client/src/App.css
@@ -2,19 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
+.app-logo {
   height: 30px;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .app-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
